tests/parsing/smtlib/v2.7/errors/050_check-sat_unclosed_1.smt2
(set-logic ALL)
(check-sat _)
